gcc/testsuite/g++.old-deja/g++.other/using3.C
// { dg-do assemble  }
struct A{
  A();
};

typedef struct {
  A i;
} S;

struct B: S{
  using S::S;	       // { dg-error "" "" { target c++98 } } no such field
};
